syntax = "proto3";

package datadog.langaugedetection;

option go_package = "pkg/proto/pbgo/languagedetection";  // golang

message Process {
  int32 pid = 1;
  int64 createTime = 2; // Used to make sure we're still looking at the right process.
}

// Should closely match `languagemodels.Language`
message Language {
  string name = 1;
  string version = 2;
}

message DetectLanguageRequest {
  repeated Process processes = 1;
}

message DetectLanguageResponse {
  repeated Language languages = 1;
}